Fixed user menu visibility regression

--- a/static/scss/user-menu.scss
+++ b/static/scss/user-menu.scss
@@ -27,8 +27,7 @@
   .dropdown-item {
     display: flex;
     align-items: center;
-    font-family: Roboto;
-    font-size: 14px;
+    font-size: 16px;
     font-weight: 500;
     color: $black;
     line-height: 14px;
